add both sonar steps